--- a/codingdojojava/src/main/resources/static/index.html
+++ b/codingdojojava/src/main/resources/static/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Java Web Development</title>
 </head>
 <body>
+    <div class="container">
+        <div class="header">
+            <ul>
+                <li>Home</li>
+                <li>Contact Us</li>
+                <li>About Us</li>
+            </ul>
+        </div>
+        <div class="subcContainer">
+
+        </div>
+        <div class="footer">
+
+        </div>
+    </div>
+<script>
+    alert("Welcome to Java Dev")
+</script>
 
 </body>
 </html>
